Revision history for Perl extension Bigtop.

0.09 Wed May 10 10:41:49 CDT 2006
    - Improved Build.PL so it won't try to install tentmaker templates
      without Gantry.

0.08 Wed May 10 07:47:23 CDT 2006
    - Improved the usability of tentmaker (I hope) by putting former tooltips
      into boxes which are always visible and expanding and clarifying the
      text in those tips.
    - Changed the name of the generated default wrapper to genwrapper.tt
      so that users of bigtop never again see the wrapper.tt which ships
      with gantry.
    - Added support for app level literals to tentmaker.

0.07 Fri May  5 15:39:16 CDT 2006
    - Added server_port statement to CGI Gantry backend so you can
      decide on a test server port in advance.
    - Removed two unitialized value warnings from GantryDefault Sitelook
      backend.
    - Factored backend loading out of gen_from_string so other Bigtop::Parser
      routines can share it (think parse_string).
    - Corrected syntax errors in generated CRUD helper methods.
    - Added TentMaker.
    - Implemented deparser (first draft) to support TentMaker.
    - Moved all backends into the Backend namespace.
    - Added documentation methods to all backends, so TentMaker can describe
      what they do for its users.
    - Factored out grammar from Bigtop::Parser and had Parse::RecDescent
      precompile it.  This results in almost a four fold speed savings
      in the test suite.  It should give a similar savings to invocations
      of bigtop and tentmaker.
    - Made generated stand alone server accept its port from the command line.
    - Added blib/lib and lib to the stand alone server's path.
    - Made table_element_blocks and field_statements optional.

0.06 Thu Mar 23 08:26:46 CST 2006
    - Added use_clean_dates to the options generated for crud constructor
      calls when a controller's type is CRUD.
    - Corrected CRUD do_add, do_edit, and do_delete so they call CRUD