@@ -20,9 +20,10 @@ my $build = $subclass->new(
         'Inline::TT'      => 0.06,
     },
     build_requires      => {
-        'Test'       => 0,
-        'Test::More' => 0,
-        'Test::Warn' => 0,
+        'Test'        => 0,
+        'Test::More'  => 0,
+        'Test::Warn'  => 0,
+        'Test::Files' => 0,
     },
     script_files        => [ glob( 'scripts/*' ) ],
     tentmaker_files     => [ glob( 'tenttemplates/*' ) ],
@@ -31,6 +32,7 @@ my $build = $subclass->new(
         't/tentmaker/*.t',
         't/init/*.t',
         't/postgres/*.t',
+        't/sqlite/*.t',
         't/gantry/*.t',
         't/cdbi/*.t',
         't/sitelook/*.t',
