@@ -30,6 +30,7 @@ lib/Bigtop/Backend/Model/GantryCDBI.pm
 lib/Bigtop/Backend/SiteLook/GantryDefault.pm
 lib/Bigtop/Backend/SQL.pm
 lib/Bigtop/Backend/SQL/Postgres.pm
+lib/Bigtop/Backend/SQL/SQLite.pm
 lib/Bigtop/bigtop.grammar
 lib/Bigtop/Deparser.pm
 lib/Bigtop/Docs/About.pm
@@ -115,6 +116,11 @@ t/postgres/02_external_template.t
 t/postgres/03_gen.t
 t/postgres/04_config_template.t
 t/postgres/ext.tt
+t/sqlite/01_tiny.t
+t/sqlite/02_external_template.t
+t/sqlite/03_gen.t
+t/sqlite/04_config_template.t
+t/sqlite/ext.tt
 t/Purge.pm
 t/sitelook/01_tiny.t
 t/sitelook/sample_wrapper.tt
