@@ -3,6 +3,9 @@ Revision history for Perl extension Bigtop.
 0.09 Wed May 10 10:41:49 CDT 2006
     - Improved Build.PL so it won't try to install tentmaker templates
       without Gantry.
+    - Added Test::Files to build_requires list.
+    - Added a backend to make SQL for SQLite.
+    - Added a --help message to bigtop script.
 
 0.08 Wed May 10 07:47:23 CDT 2006
     - Improved the usability of tentmaker (I hope) by putting former tooltips
